syntax = "proto3";

package lottery.lottery;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lottery/lottery/params.proto";
import "lottery/lottery/lottery.proto";
import "lottery/lottery/lottery_pots.proto";

option go_package = "lottery/x/lottery/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/lottery/lottery/params";
  
  }
  
  // Queries a list of ListLottery items.
  rpc ListLottery (QueryListLotteryRequest) returns (QueryListLotteryResponse) {
    option (google.api.http).get = "/lottery/lottery/list_lottery";
  
  }
  
  // Queries a list of ShowLottery items.
  rpc ShowLottery (QueryShowLotteryRequest) returns (QueryShowLotteryResponse) {
    option (google.api.http).get = "/lottery/lottery/show_lottery/{id}";
  
  }
  
  // Queries a list of LotteryPots items.
  rpc LotteryPots    (QueryGetLotteryPotsRequest) returns (QueryGetLotteryPotsResponse) {
    option (google.api.http).get = "/lottery/lottery/lottery_pots/{id}";
  
  }
  rpc LotteryPotsAll (QueryAllLotteryPotsRequest) returns (QueryAllLotteryPotsResponse) {
    option (google.api.http).get = "/lottery/lottery/lottery_pots";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryListLotteryRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListLotteryResponse {
  repeated Lottery                                lottery    = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryShowLotteryRequest {
  uint64 id = 1;
}

message QueryShowLotteryResponse {
  Lottery lottery = 1 [(gogoproto.nullable) = false];
}

message QueryGetLotteryPotsRequest {
  uint64 id = 1;
}

message QueryGetLotteryPotsResponse {
  LotteryPots LotteryPots = 1 [(gogoproto.nullable) = false];
}

message QueryAllLotteryPotsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllLotteryPotsResponse {
  repeated LotteryPots                            LotteryPots = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination  = 2;
}

